# formatting

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/formatting/: formatting.hpp  implementations.hpp  wrappers.hpp
source/: benchmark.cpp
test/: api.cc  minimal.cc  types.cc  wrappers.cc
